updated template to match json
